<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".activities.LoginActivity">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_marginTop="40dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/app_logo"/>



        <RelativeLayout
            android:id="@+id/layout2"
            android:layout_below="@id/app_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/welcome_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textColorHint="@color/colorPrimary"
                app:boxBackgroundColor="@color/colorPrimary"
                app:boxStrokeColor="@color/colorPrimary">
                <EditText android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="Username/Email" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_password"
                android:layout_below="@id/layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textColorHint="@color/colorPrimary"
                app:boxBackgroundColor="@color/colorPrimary"
                app:boxStrokeColor="@color/colorPrimary"
                app:passwordToggleEnabled="true">
                <EditText android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
            </com.google.android.material.textfield.TextInputLayout>




            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/layout_password"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"
                android:padding="8dp"
                android:text="@string/login"
                android:background="@color/colorPrimary"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/txt_createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn_login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/create_account"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/txt_forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_createAccount"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />

        </RelativeLayout>

    </RelativeLayout>
</ScrollView>